zutil-inheritance/tests/failure/wrong_parent.stderr
error[E0308]: mismatched types
  --> tests/failure/wrong_parent.rs:27:1
   |
27 | / zutil_inheritance::value! {
28 | |     struct D(B, C) {}
29 | |     impl Self {}
30 | | }
   | |_^ expected `AFields`, found `CFields`
   |
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/failure/wrong_parent.rs:27:1
   |
27 | / zutil_inheritance::value! {
28 | |     struct D(B, C) {}
29 | |     impl Self {}
30 | | }
   | |_^ expected `AMethods`, found `CMethods`
   |
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
